# NewYearsGame

./: AnimatedText.cpp  AnimatedText.h  Background.cpp  Background.h  CMakeLists.txt  Fuel.cpp  Fuel.h  Game.cpp  Game.h  ParticleManager.cpp  ParticleManager.h  Player.cpp  Player.h  PowerupManager.cpp  PowerupManager.h  SpeedManager.cpp  SpeedManager.h  SpeedOverlay.cpp  SpeedOverlay.h  TextureHandler.cpp  TextureHandler.h  TrailManager.cpp  TrailManager.h  WallManager.cpp  WallManager.h  main.cpp
cmake_modules/: FindSFML.cmake
